# mat-dp-core

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  fix-format.sh  mkdocs.yml  paper.bib  paper.md  pyproject.toml  todo.txt
docs/: 1starthere.md  index.md
docs/Function Reference/: 1resources.md  2processes.md  3constraints.md  4objective.md  5measure.md  6exceptions.md  advancedconstraints.md  constraints.md  exceptions.md  expressiveconstraints.md  measure.md  objective.md  processes.md  resources.md
docs/MAT-DP Core Cookbook/: complex.md  medium.md  realworld.md  simple.md
examples/: complex.py  real_test.py  simple.py  simple_test.py  test.py  test_high_level.py
mat_dp_core/: __init__.py  data_utils.py  further_constraints.py  maths_core.py  measure.py  measures.py  trivial.csv  utils.py
mat_dp_core/maths_core/: __init__.py  constraints.py  exceptions.py  measure.py  processes.py  resources.py  solve.py  solvers.py  tools.py
tests/: .coveragerc  conftest.py  test_constraints.py  test_mat_dp_core.py  test_maths.py  test_measure.py  test_measure_bounds.py  test_processes.py  test_resources.py  test_solve.py
