[tool.poetry]
name = "mat-dp-core"
version = "0.1.1"
description = ""
license = "MIT"
authors = ["Edd Salkield <edd@salkield.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
scipy = "^1.7.1"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-asyncio = "^0.14.0"
pytest-xdist = "^2.2.1"
pytest-cov = "^2.11.1"
black = "^21.9b0"
isort = "^5.9.3"
pre-commit = "^2.15.0"
autoflake = "^1.4"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.7"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath="./"
venv=".venv"